added deletion of tasks